<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".about" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="288dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="205dp"
                android:layout_height="207dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"
                android:gravity="center"
                app:srcCompat="@drawable/splashscreen"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/logo" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="131dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@drawable/unj"
                android:contentDescription="@string/unj" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/kuy_bisindo"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#000000"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/editText"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:text="@string/_1_0_initial_release"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/text_desc"
            android:layout_width="287dp"
            android:layout_height="103dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/ANGGOTA"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nama_anggota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="18sp"
            android:text="@string/nama_anggota" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/program_studi_pendidikan_khusus"
            android:textColor="#000000"
            android:textStyle="italic"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/developer_maintainer"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/developer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/wiwid_ihsanudin_prayoga_1512617030"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/program_studi_pend_teknik_informatika_dan_komputer"
            android:textColor="#000000"
            android:textStyle="italic"
            android:textSize="13sp" />
    </LinearLayout>
</ScrollView>