<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="220dp"
        android:layout_height="238dp"
        android:contentDescription="@string/todo"
        android:foregroundGravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/button_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22000003"
        app:srcCompat="@drawable/splashscreen" />

    <ImageView
        android:id="@+id/button_video"
        android:layout_width="334dp"
        android:layout_height="90dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="1dp"
        android:clickable="true"
        android:contentDescription="@string/button_video"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/button_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/button_video" />

    <ImageView
        android:id="@+id/button_game"
        android:layout_width="334dp"
        android:layout_height="90dp"
        android:layout_marginBottom="48dp"
        android:clickable="true"
        android:contentDescription="@string/button_game"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/button_about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/button_game" />

    <Button
        android:id="@+id/button_about"
        android:layout_width="134dp"
        android:layout_height="45dp"
        android:layout_marginBottom="30dp"
        android:text="@string/about"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

